# mcs-detector

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  LICENSE-data  Makefile  README.md  RUNLOG.csv  USAGE.md  claims_ledger.csv  environment.yml
analysis/: README.md  break_map.py  break_sensitivity.py  calib_kappa4.py  confirm_100mev.py  e0_break.py  e2_analysis.py  e2_floor_thirdform.py  e2_methods_lock.py  e2_scalemix_check.py  e3_affordability.py  e4_print_realism.py  e5_msc_systematic.py  e5a_rawk4_check.py  geom_consistency.py  homog_boundary.py  m2_collapse.py  m2_tilt.py  m3_collapse.py  m4_carbon.py  n2_wandering.py  n3_bayes.py  n4_beam.py  transport_vs_g4.py  validate_highland.py  voxel_vs_tess.py  write_e0_break_md.py
configs/: M1.yaml  M3.yaml  README.md
figs/: README.md
geom/: README.md  e0_pair.py  e1.py  generate.py  make_block_stl.py  make_campaign_voxels.py  make_foam_voxels.py  make_lattice_voxel.py  make_voronoi_voxel.py  pitch_convergence.py  (+6 more)
sim/: CMakeLists.txt  README.md  campaign.py  campaign_200.sh  escalate_500.sh  escalate_voronoi_3e7.sh  run_campaign.sh  run_e4_validate.py  run_e5_msc.py  run_foam_spotcheck.py  run_m1.py  run_m2m4.py  run_m3.py  run_m4_solids_ext.py  run_p7_repro.py
sim/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  VoxelParam.hh
sim/macros/: run.mac  vis.mac
sim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  VoxelParam.cc  mcs_sim.cc
sim/tests/cadmesh/: CMakeLists.txt  cadmesh_test.cc  make_cube_stl.py
(+272 files in other folders)
